# CENG479-Cuda-SIFT-ROS-Integration

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  benchmark.py  benchmark_results.json  documentation.html  pyproject.toml  requirements.txt  sequential_baseline_explanation.md  task_progress.md
install/: local_setup.sh  setup.sh
install/paralel/include/paralel/: cuda_kernels.hpp  gpu_feature_bus.hpp  perf_tracker.hpp
install/paralel/lib/paralel/: sift_pipeline  sift_publisher
install/paralel/share/ament_index/resource_index/package_run_dependencies/: paralel
install/paralel/share/ament_index/resource_index/parent_prefix_path/: paralel
install/paralel/share/paralel/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/paralel/share/paralel/launch/: sift_matching.launch.py
install/parallel/lib/parallel/: flann_subscriber  sift_publisher
install/parallel/share/parallel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sequential/lib/sequential/: flann_subscriber  sift_publisher
install/sequential/share/sequential/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sequential/share/sequential/launch/: sift_matching.launch.py
install/sift_interfaces/include/sift_interfaces/sift_interfaces/msg/: image_features.h  image_features.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/sift_interfaces/include/sift_interfaces/sift_interfaces/msg/detail/: image_features__builder.hpp  image_features__functions.h  image_features__rosidl_typesupport_fastrtps_c.h  image_features__rosidl_typesupport_fastrtps_cpp.hpp  image_features__rosidl_typesupport_introspection_c.h  image_features__rosidl_typesupport_introspection_cpp.hpp  image_features__struct.h  image_features__struct.hpp  image_features__traits.hpp  image_features__type_support.h  image_features__type_support.hpp
install/sift_interfaces/share/ament_index/resource_index/package_run_dependencies/: sift_interfaces
install/sift_interfaces/share/ament_index/resource_index/parent_prefix_path/: sift_interfaces
install/sift_interfaces/share/ament_index/resource_index/rosidl_interfaces/: sift_interfaces
install/sift_interfaces/share/ament_index/resource_index/rust_packages/: sift_interfaces
install/sift_interfaces/share/sift_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sift_interfaces/share/sift_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_sift_interfaces__rosidl_generator_cppExport.cmake  export_sift_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_sift_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_sift_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_sift_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_sift_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  sift_interfacesConfig-version.cmake  sift_interfacesConfig.cmake  sift_interfaces__rosidl_typesupport_cExport-noconfig.cmake  sift_interfaces__rosidl_typesupport_cExport.cmake  sift_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  sift_interfaces__rosidl_typesupport_introspection_cExport.cmake  sift_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  sift_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/sift_interfaces/share/sift_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/sift_interfaces/share/sift_interfaces/msg/: ImageFeatures.idl  ImageFeatures.json  ImageFeatures.msg
install/sift_interfaces/share/sift_interfaces/rust/: Cargo.toml  build.rs
install/sift_interfaces/share/sift_interfaces/rust/src/: lib.rs  msg.rs
install/sift_interfaces/share/sift_interfaces/rust/src/msg/: rmw.rs
log/: latest_build
scripts/: __init__.py  benchmark.py
src/: sift_matcher_default_referencer.py
src/paralel/: CMakeLists.txt
src/paralel/output/: pipeline_performance.json  pipeline_performance.txt
src/paralel/src/: cuda_kernels.cu  sift_pipeline.cpp
src/parallel/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/parallel/include/parallel/: cuda_kernels.hpp  gpu_feature_bus.hpp  perf_tracker.hpp
src/parallel/launch/: sift_matching.launch.py
src/parallel/output/: pipeline_performance.txt
src/parallel/parallel/: sift_publisher.py
src/parallel/src/: cuda_kernels.cu  sift_pipeline.cpp
src/sequential/: WALKTHROUGH.md  setup.cfg  setup.py
src/sequential/output/: pipeline_performance.json  publisher_performance.json  publisher_performance.txt  subscriber_performance.json  subscriber_performance.txt
src/sequential/sequential/: flann_subscriber.py  sift_publisher.py
src/sift_interfaces/: CMakeLists.txt  package.xml
tests/: __init__.py  test_perf_utils.py
